--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,5 +19,6 @@
       "@/*": ["src/*"]
     }
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "server-dev.js"]
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "server-dev.js"],
+  "references": [{ "path": "./tsconfig.node.json" }]
 }
