--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@vue/server-renderer": "^3.2.31",
     "@vueuse/core": "^8.2.5",
     "dplayer": "^1.26.0",
+    "hls.js": "^1.1.5",
     "koa": "^2.13.4",
     "koa-connect": "^2.1.0",
     "koa-send": "^5.0.1",
@@ -35,6 +36,7 @@
     "pinia": "^2.0.13",
     "rollup-plugin-copy": "^3.4.0",
     "vant": "^3.5.1",
+    "videojs-contrib-hls": "^5.15.0",
     "vite-plugin-restart": "^0.1.1",
     "vue": "^3.2.25",
     "vue-router": "^4.0.14"
